display array items as list item when user submits page. remove list items when users submits again

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       </div>
       <button type="submit" id="submit" class="btn btn-primary">Submit</button>
     </form>
+    <ul id="allResults">
+      
+    </ul>
   </div>
 </body>
 </html>
